Added Blog post and admin blog verification and comment option for user and blog uploaded by doctor

--- a/views/doctorProfile.ejs
+++ b/views/doctorProfile.ejs
@@ -154,7 +154,9 @@
             <% } %>
         <% }) %>
     </ul>
-
+    <form action="/doctor/blog" method="GET">
+        <button type="submit">Upload Blog Post</button>
+    </form>
     
 
     <a href="/doctor/edit">Edit Profile</a>
