--- a/views/subscriptionSuccess.ejs
+++ b/views/subscriptionSuccess.ejs
@@ -58,7 +58,7 @@
             <p><strong>Speciality:</strong> <%= doctor.speciality %></p>
             <p><strong>Subscription Type:</strong> <%= doctor.subscriptionType %></p>
         </div>
-        <a href="/">Go to Dashboard</a>
+        <a href="/doctor/profile">Go to Dashboard</a>
     </div>
 </body>
 </html>
