--- a/views/patientProfile.ejs
+++ b/views/patientProfile.ejs
@@ -58,6 +58,7 @@
             <a href="/patient/doctors">View Doctors</a> 
             <a href="/patient/bookings">Manage Bookings</a>
             <a href="/patient/edit">Edit Profile</a>
+            <a href="/patient/favorites">View Favorites</a> <!-- Added view favorites link -->
             <a href="/">Home</a>
             <form action="/auth/logout" method="POST" style="display: inline;">
                 <button type="submit">Logout</button>
