Added admin blog post and doctor can see their blogs and redirecting to the doctor booking page and added search functionality

--- a/views/PatientViewBlog.ejs
+++ b/views/PatientViewBlog.ejs
@@ -17,7 +17,7 @@
     <h2>Author Information</h2>
     <p><strong>Author:</strong> <%= blog.author %></p>
     <p><strong>Author Email:</strong> <%= blog.authorEmail %></p>
-    <a href="/patient/author/<%= blog.authorEmail %>">View Author Info</a>
+    <a href="/patient/author/<%= blog.authorId %>">View Author Info</a>
     <h2>Description</h2>
     <p><%= blog.description %></p>
     <h2>Summary</h2>
