--- a/views/adminDashboard.ejs
+++ b/views/adminDashboard.ejs
@@ -87,9 +87,7 @@
 
   <!-- Link to Admin Blogs List -->
   <a href="/admin/blogs">View Admin Blogs</a>
-  
-  <!-- Link to Blog Verification -->
-  <a href="/admin/blogs/verify/:id">Verify Blog</a>
+  <a href="/admin/blog">Upload Admin Blog</a>
 
   <a href="/doctor/admin/subscriptions">Doctor Subscription Verification Requests</a>
   <a href="/auth/logout">Logout</a>
