--- a/views/adminViewBlog.ejs
+++ b/views/adminViewBlog.ejs
@@ -42,7 +42,11 @@
     <label for="authorEmail">Author Email:</label>
     <input type="email" id="authorEmail" name="authorEmail" value="<%= blog.authorEmail %>"><br>
 
-    <!-- Add input field for image upload -->
+    <select id="priority" name="priority">
+        <option value="High" <%= blog.priority === 'High' ? 'selected' : '' %>>High</option>
+        <option value="Low" <%= blog.priority === 'Low' ? 'selected' : '' %>>Low</option>
+    </select><br>
+
     <label for="image">Image:</label>
     <input type="file" id="image" name="image"><br>
 
