--- a/views/author-info.ejs
+++ b/views/author-info.ejs
@@ -11,6 +11,17 @@
     <p><strong>Email ID:</strong> <%= author.email %></p>
     <p><strong>Speciality:</strong> <%= author.speciality %></p>
     <p><strong>Number of Blogs Posted:</strong> <%= blogCount %></p>
-    <a href="/patient/doctors">Book The Doctor</a> 
+    <% if (author.speciality) { %>
+        <a href="/patient/doctors/<%= author._id %>">Book The Doctor</a>
+    <% } %>
+
+    <br><br>
+    <button onclick="goBack()">Back</button>
+
+    <script>
+        function goBack() {
+            window.history.back();
+        }
+    </script>
 </body>
 </html>
