--- a/views/doctorProfile.ejs
+++ b/views/doctorProfile.ejs
@@ -140,6 +140,7 @@
     <a href="/doctor/bookings">Manage Bookings</a>
     <a href="/doctor/edit">Edit Profile</a>
     <a href="/doctor/manage-time-slots">Manage Time Slots</a>
+    <a href="/doctor/calendar" class="btn">View Calendar</a>
     <form action="/auth/logout" method="GET">
     <button type="submit">Logout</button>
     </form>
