Added chat functionality between the patient and the doctor

--- a/views/doctorProfile.ejs
+++ b/views/doctorProfile.ejs
@@ -178,7 +178,7 @@
         <button onclick="handleRestrictedAccess()">Manage Blogs</button>
     <% } %>
 
-    
+    <a href="/doctor/dashboard">Chat Box</a>
     <form action="/auth/logout" method="GET">
     <button type="submit">Logout</button>
     </form>
