--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -47,7 +47,6 @@
       <button type="submit">Verify OTP</button>
     </form>
   <% } %>
-  <a href="/auth/google">Signup with Google</a>
-  <a href="/auth/login">Login</a>
+  <a href="/auth/signup">Back to Signup</a> <!-- Updated link to go back to signup page -->
 </body>
 </html>
