Added calender for patients

--- a/views/patientProfile.ejs
+++ b/views/patientProfile.ejs
@@ -58,8 +58,9 @@
             <a href="/patient/doctors">View Doctors</a> 
             <a href="/patient/bookings">Manage Bookings</a>
             <a href="/patient/edit">Edit Profile</a>
-            <a href="/patient/favorites">View Favorites</a> <!-- Added view favorites link -->
+            <a href="/patient/favorites">View Favorites</a> 
             <a href="/">Home</a>
+            <a href="/patient/calendar">View Calender</a> 
             <form action="/auth/logout" method="POST" style="display: inline;">
                 <button type="submit">Logout</button>
             </form>
